src/snapshots/kern__view__tests__duration_15s.snap
---
source: src/view.rs
expression: render_with_duration(0)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
kern  [15]  30  60  [tab] restart                                               
                                                                                
the quick brown                                                                 
                                                                                
                                                                                
                                                                                
[esc] quit
