src/snapshots/kern__view__tests__results_screen_snapshot.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                      kern                                      
                                                                                
                           wpm       raw wpm        acc                         
                             12          18         85%                         
                                                                                
                           [tab] restart   [esc] quit
